javascript learning class

--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -142,5 +142,7 @@
         <p>Join FitZone Gym and transform your body and mind. Modern equipment, expert trainers, and a motivating community await you!</p>
         <button class="cta-btn">Join Now</button>
     </section>
+
+    <script src="script.js"></script>
 </body>
 </html>
