javascript learning class

--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -143,6 +143,7 @@
         <button class="cta-btn">Join Now</button>
     </section>
 
+    <!-- <script src="let_var_const_learning.js"></script> -->
     <script src="script.js"></script>
 </body>
 </html>
