javascript learning class note1

--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -144,6 +144,7 @@
     </section>
 
     <!-- <script src="let_var_const_learning.js"></script> -->
-    <script src="script.js"></script>
+    <!-- <script src="reassignment_redeclaration.js"></script> -->
+    <script src="temporal_dead_zone.js"></script>
 </body>
 </html>
