--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -145,6 +145,6 @@
 
     <!-- <script src="let_var_const_learning.js"></script> -->
     <!-- <script src="reassignment_redeclaration.js"></script> -->
-    <script src="datatypes.js"></script>
+    <script src="reference_datatypes.js"></script>
 </body>
 </html>
