Adding new learning to js

--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -145,6 +145,8 @@
 
     <!-- <script src="let_var_const_learning.js"></script> -->
     <!-- <script src="reassignment_redeclaration.js"></script> -->
-    <script src="reference_datatypes.js"></script>
+    <!-- <script src="reference_datatypes.js"></script> -->
+    <!-- <script src="async.js"></script> -->
+     <script src="quirks.js"></script>
 </body>
 </html>
