--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -147,6 +147,7 @@
     <!-- <script src="reassignment_redeclaration.js"></script> -->
     <!-- <script src="reference_datatypes.js"></script> -->
     <!-- <script src="async.js"></script> -->
-     <script src="quirks.js"></script>
+    <!-- <script src="quirks.js"></script> -->
+    <script src="type_coersion.js"></script>
 </body>
 </html>
