Adding Truthy and falsy and type coercion

--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -148,6 +148,6 @@
     <!-- <script src="reference_datatypes.js"></script> -->
     <!-- <script src="async.js"></script> -->
     <!-- <script src="quirks.js"></script> -->
-    <script src="type_coersion.js"></script>
+    <script src="type_coercion.js"></script>
 </body>
 </html>
