--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -148,6 +148,7 @@
     <!-- <script src="reference_datatypes.js"></script> -->
     <!-- <script src="async.js"></script> -->
     <!-- <script src="quirks.js"></script> -->
-    <script src="type_coercion.js"></script>
+    <!-- <script src="type_coercion.js"></script> -->
+    <script src="operators.js"></script>
 </body>
 </html>
